syntax = "proto3";

package NAlice.NCombinators;

option go_package = "a.yandex-team.ru/alice/megamind/protos/analytics/combinators";
option java_package = "ru.yandex.alice.megamind.protos.analytics.combinators";
option java_outer_classname = "CombinatorAnalyticsInfoProto";

import "mapreduce/yt/interface/protos/extension.proto";

message TCombinatorAnalyticsInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TIncomingScenarioInfo {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        bool IsIrrelevant = 1 [json_name="is_irrelevant", (NYT.column_name) = "is_irrelevant"];
    }

    string CombinatorProductName = 1 [json_name = "combinator_product_name", (NYT.column_name) = "combinator_product_name"];
    map<string, TIncomingScenarioInfo> IncomingScenarioInfos = 2 [json_name = "incoming_scenario_infos", (NYT.column_name) = "incoming_scenario_infos"];
}
