syntax = "proto3";

package NAlice.NMegamind;

option go_package = "a.yandex-team.ru/alice/megamind/protos/common/required_messages;requiredmessagespb";
option java_package = "ru.yandex.alice.megamind.protos.common.required_messages";

import "alice/protos/endpoint/capabilities/all/all.proto";

// this message describes all the messages inside google.protobuf.Any that pass through Megamind.
// there is no need to use this message anywhere except for Megamind binary
// and it should be gone after jsonToProto conversions are gone and google.protobuf.Any can be used without parsing
message TRequiredMessages {
    optional NAlice.TCapabilityHolder CapabilityHolder = 1;
}
